--- a/layouts/style.css
+++ b/layouts/style.css
@@ -168,3 +168,13 @@ body {
     opacity: 0;
   }
 }
+
+.icon-dropdown {
+  color: white;
+  font-weight: 400;
+  transform: rotate(90deg);
+  display: flex;
+  justify-content: flex-start;
+  margin-bottom: 5%;
+  transition: 0.4s;
+}
